Integerクラスのインスタンス生成を valueOfに置き換え
ermファイル保存のメモリ使用量の削減及び処理速度向上