@@ -22,7 +22,7 @@ public class OverviewHtmlReportPageGenerator {
 		Integer id = (Integer) idMap.get(object);
 
 		if (id == null) {
-			id = new Integer(idMap.size());
+			id = Integer.valueOf(idMap.size());
 			this.idMap.put(object, id);
 		}
 
